--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
+        "squizlabs/php_codesniffer": "^3.2",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.5",
